# devrev-mcp-server

./: .gitignore  PROMPT_TEMPLATE.md  README.md  cursor-setup.sh  cursor_devrev_config.json  install.sh  pyproject.toml
src/devrev_mcp/: __init__.py  __main__.py  auth.py  client.py  config.py  errors.py
